force-app/main/default/objects/Case/fields/FithLevelComplaintClassification__c.field-meta.xml
<CustomField>
    <fullName>FithLevelComplaintClassification__c</fullName>
    <label>5° Livello</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ThirdLevelComplaintClassification__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_FifthLevelComplaintClassification</valueSetName>
    </valueSet>
</CustomField>