force-app/main/default/objects/Case/fields/FixedAmount__c.field-meta.xml
<CustomField>
    <fullName>FixedAmount__c</fullName>
    <description>Diritti fissi che compongono il prezzo del preventivo</description>
    <label>Componente Fissa Importo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>