force-app/main/default/objects/Case/fields/FlowType__c.field-meta.xml
<CustomField>
    <fullName>FlowType__c</fullName>
    <label>Tipologia Flusso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VNO</fullName>
            </value>
            <value>
                <fullName>SOS</fullName>
            </value>
            <value>
                <fullName>SOF</fullName>
            </value>
            <value>
                <fullName>SNS</fullName>
            </value>
            <value>
                <fullName>SNM</fullName>
            </value>
            <value>
                <fullName>SNF</fullName>
            </value>
            <value>
                <fullName>RSN</fullName>
            </value>
            <value>
                <fullName>RNV</fullName>
            </value>
            <value>
                <fullName>RNO</fullName>
            </value>
            <value>
                <fullName>RFO</fullName>
            </value>
            <value>
                <fullName>PNO</fullName>
            </value>
            <value>
                <fullName>PDO</fullName>
            </value>
            <value>
                <fullName>SMIS</fullName>
            </value>
            <value>
                <fullName>Ante Delibera 65/2012</fullName>
            </value>
            <value>
                <fullName>PDO2G</fullName>
            </value>
            <value>
                <fullName>PNO2G</fullName>
            </value>
            <value>
                <fullName>VNO2G</fullName>
            </value>
            <value>
                <fullName>SMN2G</fullName>
            </value>
            <value>
                <fullName>RFO2G</fullName>
            </value>
            <value>
                <fullName>RNO2G</fullName>
            </value>
            <value>
                <fullName>RNV2G</fullName>
            </value>
            <value>
                <fullName>RSN2G</fullName>
            </value>
            <value>
                <fullName>Misura flusso 0150 errato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>