force-app/main/default/objects/Case/fields/FourthLevelComplaintClassification__c.field-meta.xml
<CustomField>
    <fullName>FourthLevelComplaintClassification__c</fullName>
    <label>4° Livello</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ThirdLevelComplaintClassification__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_FourthLevelComplaintClassification</valueSetName>
    </valueSet>
</CustomField>