force-app/main/default/objects/Case/fields/HasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Traccia la disiscrizione del cliente dalle liste di distribuzione attraverso la funzionalità messa a disposizione dal provider Email (List-unsubscribed).</description>
    <label>Disiscritto alle liste di distribuzione</label>
    <type>Checkbox</type>
</CustomField>