force-app/main/default/objects/Case/fields/HasOptedOutSoftSpam__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutSoftSpam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica la scelta del cliente riguardo il soft spam.</description>
    <label>Diniego Soft-Spam/Legittimo interesse</label>
    <type>Checkbox</type>
</CustomField>