force-app/main/default/objects/Case/fields/HerokuPracticeCode__c.field-meta.xml
<CustomField>
    <fullName>HerokuPracticeCode__c</fullName>
    <description>Codice pratica restituito da Heroku al CRM.</description>
    <label>Codice Pratica Heroku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>