force-app/main/default/objects/Case/fields/HouseType__c.field-meta.xml
<CustomField>
    <fullName>HouseType__c</fullName>
    <label>Tipo casa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_DwellingType</valueSetName>
    </valueSet>
</CustomField>