force-app/main/default/objects/Case/fields/Iban__c.field-meta.xml
<CustomField>
    <fullName>Iban__c</fullName>
    <description>IBAN</description>
    <label>IBAN</label>
    <length>27</length>
    <type>Text</type>
</CustomField>