force-app/main/default/objects/Case/fields/IbanABI__c.field-meta.xml
<CustomField>
    <fullName>IbanABI__c</fullName>
    <description>ABI</description>
    <label>ABI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>