force-app/main/default/objects/Case/fields/IbanCAB__c.field-meta.xml
<CustomField>
    <fullName>IbanCAB__c</fullName>
    <description>Numero Fattura</description>
    <label>CAB</label>
    <length>5</length>
    <type>Text</type>
</CustomField>