force-app/main/default/objects/Case/fields/IbanCIN_IBAN__c.field-meta.xml
<CustomField>
    <fullName>IbanCIN_IBAN__c</fullName>
    <label>Numeri di Controllo</label>
    <length>2</length>
    <type>Text</type>
</CustomField>