force-app/main/default/objects/Case/fields/IbanCodeNumber__c.field-meta.xml
<CustomField>
    <fullName>IbanCodeNumber__c</fullName>
    <label>Numero conto corrente</label>
    <length>12</length>
    <type>Text</type>
</CustomField>