force-app/main/default/objects/Case/fields/ImmobileSurface__c.field-meta.xml
<CustomField>
    <fullName>ImmobileSurface__c</fullName>
    <description>Contiene il valore derivante da Arricchimento dati e migrazione (ambito TARI) relativo all&apos;operando SAP TFSC000000 TIA - S Rilevante per Calcolo </description>
    <label>Superficie rilevante per il calcolo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>