force-app/main/default/objects/Case/fields/IndemnityConfirmed__c.field-meta.xml
<CustomField>
    <fullName>IndemnityConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generazione possibile indennizzo</label>
    <type>Checkbox</type>
</CustomField>