force-app/main/default/objects/Case/fields/IndemnityDueBilllingCorrection__c.field-meta.xml
<CustomField>
    <fullName>IndemnityDueBilllingCorrection__c</fullName>
    <formula>IF(ISPICKVAL(ComplaintType__c,&quot;Reclamo Scritto&quot;) &amp;&amp; ISPICKVAL(CorrectionRight__c,&quot;Si&quot;), IF(CorrectionDocumentEmissionDay__c &lt; SendDate__c + 40 &amp;&amp; CorrectionDocumentEmissionDay__c &gt;=SendDate__c + 20 , 25, IF(CorrectionDocumentEmissionDay__c &lt; SendDate__c + 60 &amp;&amp; CorrectionDocumentEmissionDay__c &gt;= SendDate__c + 40, 50, IF(CorrectionDocumentEmissionDay__c &gt;= SendDate__c + 60, 75, 0))), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indennizzo per rettifica fatturazione</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>