force-app/main/default/objects/Case/fields/IndemnityDueSendResponse__c.field-meta.xml
<CustomField>
    <fullName>IndemnityDueSendResponse__c</fullName>
    <formula>IF( ISPICKVAL(ComplaintType__c,&quot;Reclamo Scritto&quot;),IF(TODAY() &lt;= SendDate__c + 60 &amp;&amp; TODAY() &gt; SendDate__c + 30 , 25,IF(TODAY() &lt;= SendDate__c + 90 &amp;&amp; TODAY() &gt; SendDate__c + 60, 50,IF(TODAY() &gt; SendDate__c + 90, 75, 0))),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indennizzo per invio risposta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>