force-app/main/default/objects/Case/fields/IndemnityMotivation__c.field-meta.xml
<CustomField>
    <fullName>IndemnityMotivation__c</fullName>
    <formula>IF(AND(
				ISPICKVAL(ComplaintType__c,&quot;Reclamo Scritto&quot;),
				OR(IndemnityDueSendResponse__c &gt; 0, IndemnityDueBilllingCorrection__c &gt; 0), 
			!IndemnityConfirmed__c,
    OR( CONTAINS(TEXT(Phase__c),&quot;Risposta Inviata&quot;), CONTAINS(TEXT(Phase__c),&quot;Completata&quot;))),
			&quot;Altro indennizzo stesso anno solare&quot;, 
			null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Motivazione mancata conferma indennizzo</label>
    <type>Text</type>
</CustomField>