force-app/main/default/objects/Case/fields/InformationDetail__c.field-meta.xml
<CustomField>
    <fullName>InformationDetail__c</fullName>
    <description>Informazioni di dettalio inerenti l&apos;informativa</description>
    <label>Dettaglio Informazioni</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_InformationDetail</valueSetName>
    </valueSet>
</CustomField>