force-app/main/default/objects/Case/fields/InformativeCluster__c.field-meta.xml
<CustomField>
    <fullName>InformativeCluster__c</fullName>
    <description>Cluster selezionato all&apos;interno del processo di Informative</description>
    <label>Informative - Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambiente</fullName>
            </value>
            <value>
                <fullName>Annullamento</fullName>
            </value>
            <value>
                <fullName>Autolettura</fullName>
            </value>
            <value>
                <fullName>Canone Rai</fullName>
            </value>
            <value>
                <fullName>Disattivazioni</fullName>
            </value>
            <value>
                <fullName>Attivazioni</fullName>
            </value>
            <value>
                <fullName>Fatturazione</fullName>
            </value>
            <value>
                <fullName>HERA</fullName>
            </value>
            <value>
                <fullName>Informative</fullName>
            </value>
            <value>
                <fullName>Modifiche Anagrafiche</fullName>
            </value>
            <value>
                <fullName>Morosità</fullName>
            </value>
            <value>
                <fullName>Notifiche</fullName>
            </value>
            <value>
                <fullName>Pagamenti</fullName>
            </value>
            <value>
                <fullName>Preventivi</fullName>
            </value>
            <value>
                <fullName>Reclami</fullName>
            </value>
            <value>
                <fullName>Variazioni</fullName>
            </value>
            <value>
                <fullName>Verifiche</fullName>
            </value>
            <value>
                <fullName>Voltura</fullName>
            </value>
            <value>
                <fullName>PostSales VAS</fullName>
            </value>
			<value>
                <fullName>Generiche Attivazioni</fullName>
            </value>
			<value>
                <fullName>Generiche VAS</fullName>
            </value>
            <value>
                <fullName>VAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>