force-app/main/default/objects/Case/fields/InformativeType__c.field-meta.xml
<CustomField>
    <fullName>InformativeType__c</fullName>
    <description>Processo selezionato all&apos;interno del processo di Informative</description>
    <label>Informative - Processo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allineamento Anagrafica</fullName>
            </value>
            <value>
                <fullName>Allineamento Canone Rai</fullName>
            </value>
            <value>
                <fullName>Altre Verifiche</fullName>
            </value>
            <value>
                <fullName>Annullamento Contratti</fullName>
            </value>
            <value>
                <fullName>Attivazione Click&amp;Pay</fullName>
            </value>
            <value>
                <fullName>Autolettura da cliente</fullName>
            </value>
            <value>
                <fullName>Autolettura da processo</fullName>
            </value>
            <value>
                <fullName>Blocco Sollecito/Interessi</fullName>
            </value>
            <value>
                <fullName>BP/CA - errata categoria</fullName>
            </value>
            <value>
                <fullName>Caduta Linea/Chiamata Muta</fullName>
            </value>
            <value>
                <fullName>Cambio contatore non registrato</fullName>
            </value>
            <value>
                <fullName>Chiusura Contatore</fullName>
            </value>
            <value>
                <fullName>Comportamento Altri Venditori</fullName>
            </value>
            <value>
                <fullName>Comportamento Venditori HC</fullName>
            </value>
            <value>
                <fullName>Comunicazione di Fallimento</fullName>
            </value>
            <value>
                <fullName>Comunicazione Pagamento</fullName>
            </value>
            <value>
                <fullName>Condizioni Contrattuali Errate</fullName>
            </value>
            <value>
                <fullName>Consegna copia chiave GdM</fullName>
            </value>
            <value>
                <fullName>Contenzioso In Corso</fullName>
            </value>
            <value>
                <fullName>Contratto Non Richiesto</fullName>
            </value>
            <value>
                <fullName>Copia Bolletta/Bollettino</fullName>
            </value>
            <value>
                <fullName>Dettaglio Bolletta</fullName>
            </value>
            <value>
                <fullName>Disassociazione Utente Web</fullName>
            </value>
            <value>
                <fullName>Doppi Pagamenti/Incassi</fullName>
            </value>
            <value>
                <fullName>Errore Chiamata</fullName>
            </value>
            <value>
                <fullName>Errore di Fatturazione</fullName>
            </value>
            <value>
                <fullName>Esercizio Diritti Privacy</fullName>
            </value>
            <value>
                <fullName>Fiscale</fullName>
            </value>
            <value>
                <fullName>Fiscale  - IVA Esenzione/Revoca</fullName>
            </value>
            <value>
                <fullName>Gestione Bonus Sociale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>