force-app/main/default/objects/Case/fields/InstallmentNumberRequired__c.field-meta.xml
<CustomField>
    <fullName>InstallmentNumberRequired__c</fullName>
    <description>Numero Rate Richieste</description>
    <label>Numero Rate Richieste</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>