force-app/main/default/objects/Case/fields/InvoiceCertifiedEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCertifiedEmailAddress__c</fullName>
    <description>Nuova email invio bolletta PEC per sotto-processo Modifica Dati di Recapito</description>
    <label>Email PEC Invio Bolletta</label>
    <type>Email</type>
</CustomField>