force-app/main/default/objects/Case/fields/InvoiceEmail__c.field-meta.xml
<CustomField>
    <fullName>InvoiceEmail__c</fullName>
    <description>Nuova email invio bolletta per sotto-processo Modifica Dati di Recapito</description>
    <label>E-Mail Invio Bolletta</label>
    <type>Email</type>
</CustomField>