force-app/main/default/objects/Case/fields/InvoiceList__c.field-meta.xml
<CustomField>
    <fullName>InvoiceList__c</fullName>
    <description>Recupero dei dati in corso. Attendere alcuni secondi e riprovare a tagliare o copiare.</description>
    <label>Lista Fatture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>