force-app/main/default/objects/Case/fields/InvoicingCity__c.field-meta.xml
<CustomField>
    <fullName>InvoicingCity__c</fullName>
    <description>Componente Indirizzo di fatturazione</description>
    <label>Comune [Spedizione/Fatturazione]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>