force-app/main/default/objects/Case/fields/InvoicingCityCode__c.field-meta.xml
<CustomField>
    <fullName>InvoicingCityCode__c</fullName>
    <description>Componente Indirizzo di fatturazione</description>
    <label>Codice ISTAT [Spedizione/Fatturazione]</label>
    <length>6</length>
    <type>Text</type>
</CustomField>