force-app/main/default/objects/Case/fields/InvoicingCountry__c.field-meta.xml
<CustomField>
    <fullName>InvoicingCountry__c</fullName>
    <description>Componente Indirizzo di fatturazione</description>
    <label>Stato [Spedizione/Fatturazione]</label>
    <length>80</length>
    <type>Text</type>
</CustomField>