force-app/main/default/objects/Case/fields/InvoicingPlace__c.field-meta.xml
<CustomField>
    <fullName>InvoicingPlace__c</fullName>
    <description>Componente Indirizzo di fatturazione</description>
    <label>Località [Spedizione/Fatturazione]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>