force-app/main/default/objects/Case/fields/InvoicingProvince__c.field-meta.xml
<CustomField>
    <fullName>InvoicingProvince__c</fullName>
    <description>Componente Indirizzo di fatturazione</description>
    <label>Provincia [Spedizione/Fatturazione]</label>
    <length>2</length>
    <type>Text</type>
</CustomField>