force-app/main/default/objects/Case/fields/InvoicingStreetCode__c.field-meta.xml
<CustomField>
    <fullName>InvoicingStreetCode__c</fullName>
    <description>Componente Indirizzo di fatturazione</description>
    <label>Codice Via Stradario SAP [Spedizione/Fat</label>
    <length>30</length>
    <type>Text</type>
</CustomField>