force-app/main/default/objects/Case/fields/InvoicingStreetName__c.field-meta.xml
<CustomField>
    <fullName>InvoicingStreetName__c</fullName>
    <description>Componente Indirizzo di fatturazione</description>
    <label>Nome Via [Spedizione/Fatturazione]</label>
    <length>200</length>
    <type>Text</type>
</CustomField>