force-app/main/default/objects/Case/fields/InvoicingStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoicingStreetNumber__c</fullName>
    <description>Componente Indirizzo di fatturazione</description>
    <label>Civico [Spedizione/Fatturazione]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>