force-app/main/default/objects/Case/fields/InvoicingStreetNumberExtension__c.field-meta.xml
<CustomField>
    <fullName>InvoicingStreetNumberExtension__c</fullName>
    <description>Componente Indirizzo di fatturazione</description>
    <label>Estens.Civico [Spedizione/Fatturazione]</label>
    <length>15</length>
    <type>Text</type>
</CustomField>