force-app/main/default/objects/Case/fields/InvoicingStreetToponym__c.field-meta.xml
<CustomField>
    <fullName>InvoicingStreetToponym__c</fullName>
    <description>Componente Indirizzo di fatturazione</description>
    <label>Toponimo [Spedizione/Fatturazione]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>