force-app/main/default/objects/Case/fields/IsAlertActive__c.field-meta.xml
<CustomField>
    <fullName>IsAlertActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nuovo valore di abilitazione per l&apos;alert.</description>
    <label>Alert Attivato</label>
    <type>Checkbox</type>
</CustomField>