force-app/main/default/objects/Case/fields/IsContainer__c.field-meta.xml
<CustomField>
    <fullName>IsContainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contenitore?</label>
    <type>Checkbox</type>
</CustomField>