force-app/main/default/objects/Case/fields/IsExportCMOR__c.field-meta.xml
<CustomField>
    <fullName>IsExportCMOR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizzato dalla SIE 173</description>
    <label>Export CMOR</label>
    <type>Checkbox</type>
</CustomField>