force-app/main/default/objects/Case/fields/IsExportSIE__c.field-meta.xml
<CustomField>
    <fullName>IsExportSIE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo tecnico per l&apos;estrazione delle sie (34)</description>
    <label>IsExportSIE</label>
    <type>Checkbox</type>
</CustomField>