force-app/main/default/objects/Case/fields/IsInvoicingVerified__c.field-meta.xml
<CustomField>
    <fullName>IsInvoicingVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Componente Indirizzo di fatturazione</description>
    <label>Indirizzo Verificato [Spedizione/Fattura</label>
    <type>Checkbox</type>
</CustomField>