force-app/main/default/objects/Case/fields/IsReiteration__c.field-meta.xml
<CustomField>
    <fullName>IsReiteration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reiterato?</label>
    <type>Checkbox</type>
</CustomField>