force-app/main/default/objects/Case/fields/IsSameReasonComplaint__c.field-meta.xml
<CustomField>
    <fullName>IsSameReasonComplaint__c</fullName>
    <label>Cliente reclama per lo stesso motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>