force-app/main/default/objects/Case/fields/IsVATGroupJoined__c.field-meta.xml
<CustomField>
    <fullName>IsVATGroupJoined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nuova Flag Adesione Gruppo IVA per sotto-processo Variazione Gruppo IVA</description>
    <label>Flag Adesione Gruppo IVA</label>
    <type>Checkbox</type>
</CustomField>