force-app/main/default/objects/Case/fields/JobCenterCode__c.field-meta.xml
<CustomField>
    <fullName>JobCenterCode__c</fullName>
    <label>Codice centro lavoro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>