force-app/main/default/objects/Case/fields/JointBottomAdhesion__c.field-meta.xml
<CustomField>
    <fullName>JointBottomAdhesion__c</fullName>
    <label>Adesione Fondo Fughe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>