force-app/main/default/objects/Case/fields/KnowledgeClientCategory__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeClientCategory__c</fullName>
    <description>Campo formula utilizzato per la funzione di Suggested Article</description>
    <formula>CASE(Account.Category__c,
&quot;Famiglie&quot;, &quot;Famiglie&quot;,
&quot;Aziende&quot;, &quot;Aziende&quot;,
&quot;Aziende SME&quot;, &quot;Aziende&quot;,
&quot;Aziende Soho&quot;, &quot;Aziende&quot;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipologia Cliente Knowledge</label>
    <type>Text</type>
</CustomField>