force-app/main/default/objects/Case/fields/LandRegistry__c.field-meta.xml
<CustomField>
    <fullName>LandRegistry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dati catastali</label>
    <referenceTo>LandRegistry__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>