force-app/main/default/objects/Case/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Nuovo Cognome cliente per sotto-processo Modifica Dati Fiscali</description>
    <label>Cognome / Ragione Sociale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>