force-app/main/default/objects/Case/fields/MacroTopic__c.field-meta.xml
<CustomField>
    <fullName>MacroTopic__c</fullName>
    <description>Il Macro argomento inerente l&apos;informativa</description>
    <label>Macro Argomento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_MacroTopic</valueSetName>
    </valueSet>
</CustomField>