force-app/main/default/objects/Case/fields/MandatoryAttachments__c.field-meta.xml
<CustomField>
    <fullName>MandatoryAttachments__c</fullName>
    <label>Allegati obbligatori</label>
    <length>255</length>
    <type>Text</type>
</CustomField>