force-app/main/default/objects/Case/fields/MarketingPrivacy__c.field-meta.xml
<CustomField>
    <fullName>MarketingPrivacy__c</fullName>
    <description>Indica la scelta del cliente riguardo l&apos;essere contattato per scopi di marketing</description>
    <label>Consenso Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNoNotDeclared</valueSetName>
    </valueSet>
</CustomField>