force-app/main/default/objects/Case/fields/MeterRelation__c.field-meta.xml
<CustomField>
    <fullName>MeterRelation__c</fullName>
    <label>Relazione Contatore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>