force-app/main/default/objects/Case/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Numero di telefono cellulare</description>
    <label>Cellulare</label>
    <type>Phone</type>
</CustomField>