force-app/main/default/objects/Case/fields/MobilePhoneNoticePesse__c.field-meta.xml
<CustomField>
    <fullName>MobilePhoneNoticePesse__c</fullName>
    <label>Telefono cellulare preavviso pers. Pesse</label>
    <type>Phone</type>
</CustomField>