force-app/main/default/objects/Case/fields/ModeSendPaperlessCode__c.field-meta.xml
<CustomField>
    <fullName>ModeSendPaperlessCode__c</fullName>
    <description>Modalità invio codice Paperless</description>
    <label>Modalità invio codice Paperless</label>
    <length>255</length>
    <type>Text</type>
</CustomField>