force-app/main/default/objects/Case/fields/ModuleFromContributor__c.field-meta.xml
<CustomField>
    <fullName>ModuleFromContributor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modulo prodotto da contribuente</label>
    <type>Checkbox</type>
</CustomField>