force-app/main/default/objects/Case/fields/Multisite__c.field-meta.xml
<CustomField>
    <fullName>Multisite__c</fullName>
    <label>Multisito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>