force-app/main/default/objects/Case/fields/NewAttempt__c.field-meta.xml
<CustomField>
    <fullName>NewAttempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nuovo Tentativo</label>
    <type>Checkbox</type>
</CustomField>