force-app/main/default/objects/Case/fields/Nome_cimitero__c.field-meta.xml
<CustomField>
    <fullName>Nome_cimitero__c</fullName>
    <description>Campo utilizzato per Votive Modena</description>
    <label>Nome cimitero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>