force-app/main/default/objects/Case/fields/NoteCode__c.field-meta.xml
<CustomField>
    <fullName>NoteCode__c</fullName>
    <label>Codice Nota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>