force-app/main/default/objects/Case/fields/NoticeId__c.field-meta.xml
<CustomField>
    <fullName>NoticeId__c</fullName>
    <label>Codice Avviso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>