force-app/main/default/objects/Case/fields/NotPerformedBefore__c.field-meta.xml
<CustomField>
    <fullName>NotPerformedBefore__c</fullName>
    <description>Da non eseguire prima del</description>
    <label>Da non eseguire prima del</label>
    <type>Date</type>
</CustomField>