force-app/main/default/objects/Case/fields/NotResidentDomesticHousingUnit__c.field-meta.xml
<CustomField>
    <fullName>NotResidentDomesticHousingUnit__c</fullName>
    <label>Unità Abitative Domestico Non Residente</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>