force-app/main/default/objects/Case/fields/NotResidentMembers__c.field-meta.xml
<CustomField>
    <fullName>NotResidentMembers__c</fullName>
    <label>Numero componenti non residenti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>