force-app/main/default/objects/Case/fields/OfficeSubjectCode__c.field-meta.xml
<CustomField>
    <fullName>OfficeSubjectCode__c</fullName>
    <description>Per modifica Dati fatturazione elettronica</description>
    <label>Codice Ufficio/Destinatario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>