force-app/main/default/objects/Case/fields/OperationCode__c.field-meta.xml
<CustomField>
    <fullName>OperationCode__c</fullName>
    <description>Output dell&apos;interrogazione dell&apos;oggetto QuoteManagement__c tracciato sul Case</description>
    <label>Codice Operazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>