force-app/main/default/objects/Case/fields/OperationSubType__c.field-meta.xml
<CustomField>
    <fullName>OperationSubType__c</fullName>
    <label>Sottotipo Operazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Risarcimenti danni</fullName>
            </value>
            <value>
                <fullName>Prezzo energia negoziato</fullName>
            </value>
            <value>
                <fullName>Rimborso totale bollette</fullName>
            </value>
            <value>
                <fullName>Rimborso parziale bollette</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>